# projeto_analise_SDR

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AUTHENTICATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.8.0.md  SECURITY.md  dashboard.py  index.html  main.py  mkdocs.yml  poetry.lock.backup  pyproject.toml  sitemap.xml
.agent/: project-guidelines.md
.agent/workflows/: development.md
.github/: SECRETS.md
.github/workflows/: ci.yml  docs.yml  manual_analysis.yml  monitoring.yml  weekly_analysis.yml
.streamlit/: config.toml
adr/001-postgresql-auth/: index.html
adr/002-echarts-vs-plotly/: index.html
adr/003-streamlit-architecture/: index.html
changelog/: index.html
config/: settings.py
config/prompts/: cx_analysis.example.txt  product_analysis.example.txt  qa_analysis.example.txt  sales_analysis.example.txt
contributing/: index.html
data/raw/: mock_dashboard_data.json
database/: apply_analysis_migration.py  auth.db  init_users.py
database/migrations/: 003_create_analysis_results.sql  004_add_oauth_and_roles.sql
docs/: README.md  TECHNICAL_MANUAL.md  USER_GUIDE.md  changelog.md  contributing.md  index.md  project-guidelines.md  project_status.md
docs/adr/: 001-postgresql-auth.md  002-echarts-vs-plotly.md  003-streamlit-architecture.md
docs/runbooks/: rollback.md  troubleshooting.md
docs/technical/: api.md  architecture.md  cicd.md  components.md  gemini-integration.md  lgpd-remediation.md  versioning.md
docs/user-guide/: dashboard.md  faq.md  metrics.md  overview.md
pages/: 0_🔐_Login.py  1_📊_Visão_Geral.py  2_👥_Agentes.py  3_📈_Análise_Temporal.py  4_🎯_Leads.py  5_🧠_Insights.py  6_⚙️_Admin.py  7_🔔_Alertas.py  8_🏥_Health.py  9_🤖_Automação.py
project_status/: index.html
runbooks/rollback/: index.html
runbooks/troubleshooting/: index.html
scripts/: analyze_chat_patterns.py  analyze_chat_volume.py  benchmark_bigquery.py  create_analysis_table.py  discover_schema.py  extract_llm_sample.py  run_weekly_analysis.py  send_weekly_report.py  test_bigquery.py  test_dashboard_logic.py  test_llm_prompts.py  test_week_calculation.py  validate_corrected_flow.py
search/: search_index.json
src/: batch_analyzer.py  context_provider.py  dashboard_utils.py  excel_export.py  filters.py  gemini_client.py  ingestion.py  insights_service.py  llm_analysis.py  llm_cache.py  llm_schemas.py  logging_config.py  metrics.py  models.py  ops_analysis.py  reporting.py
src/auth/: __init__.py  alert_models.py  alert_service.py  auth_manager.py  database.py  google_auth.py  models.py  permissions.py
src/observability/: __init__.py  health.py  sentry_config.py
technical/api/: index.html
technical/architecture/: index.html
technical/cicd/: index.html
technical/components/: index.html
technical/gemini-integration/: index.html
technical/versioning/: index.html
tests/: test_alert_system.py  test_auth_manager.py  test_auth_models.py  test_batch_analyzer.py  test_batch_analyzer_bq.py  test_batch_analyzer_streaming.py  test_context_provider.py  test_core.py  test_dashboard_utils.py  test_filters_and_export.py  test_gemini_client.py  test_google_auth.py  test_ingestion.py  test_ingestion_bq.py  test_ingestion_streaming.py  test_insights_service.py  test_llm_analysis.py  test_llm_cache_extended.py  test_llm_schemas.py  test_metrics.py  test_observability.py  test_ops_analysis.py  test_reporting.py
tests/integration/: test_auth_flow.py
user-guide/dashboard/: index.html
user-guide/faq/: index.html
user-guide/metrics/: index.html
user-guide/overview/: index.html
