[tool.poetry]
name = "projeto-analise-sdr"
version = "0.8.0"
description = ""
authors = ["gabrielpastega-bcned <gabriel.pastega@empresa.com.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"
pytz = "^2024.1"
httpx = "^0.28.1"
streamlit = "^1.41.0"
plotly = "^5.24.1"
pandas = "^2.2.3"
google-cloud-bigquery = "^3.28.0"
python-dotenv = "^1.0.1"
nest-asyncio = "^1.6.0"
google-generativeai = "^0.8.3"
redis = "^5.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.8"
mypy = "^1.19.0"
pytest-cov = "^7.0.0"
pre-commit = "^4.5.0"
bandit = "^1.9.2"
mkdocs-material = "^9.7.0"
types-pytz = "^2025.2.0.20251108"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
